[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "sbn"
description = "Since 4 March 2019"
version = "121"
authors = [
    {name = "Bart Thate", email = "bthate@dds.nl" },
]
readme = "README.rst"
license = { text="Public Domain"}
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.urls]
"home" = "https://pypi.org/project/sbn"
"bugs" = "https://github.com/bthate/sbn/issues"
"source" = "https://github.com/bthate/sbn"


[tool.setuptools]
script-files = [
    "bin/sbn",
]
packages = [
   "sbn",
   "sbn.modules"
]


[tool.setuptools.data-files]
"share/doc/sbn/docs" = [
    "docs/about.rst",
    "docs/ack.png",
    "docs/ack3.png",
    "docs/bevestigd.jpg",
    "docs/beuker.png",
    "docs/bylaw.png",
    "docs/conf.py",
    "docs/ECHAabilify.png",
    "docs/ECHAclozapine.png",
    "docs/ECHAhaldol.png",
    "docs/ECHAzyprexa.png",
    "docs/evidence.rst",
    "docs/genocide.jpg",
    "docs/genocide.png",
    "docs/genocidesmile.png",
    "docs/genocide3.png",
    "docs/guilty.rst",
    "docs/index.rst",
    "docs/informed.jpg",
    "docs/kamer2.png",
    "docs/manual.rst",
    "docs/opdehoogte.jpg",
    "docs/OTP111.png",
    "docs/OTP222.png",
    "docs/reconsider.rst",
    "docs/request.rst",
    "docs/robots.txt",
    "docs/since.png",
    "docs/skull3.png",
    "docs/verbatim4.png",
    "docs/verbatim7.png",
    "docs/verzoek.jpg",
    "docs/writings.rst",
    "docs/zyprexa.png"
]


"share/doc/sbn/docs/_static" = [
    "docs/_static/sbn.css",
]


"share/doc/sbn/docs/files" = [
    "docs/files/sitemap.xml",
]


"share/doc/sbn/pdf" =  [
    "docs/pdf/bevestigd.pdf",
    "docs/pdf/EM_Ack_OTP-CR-117_19.pdf",
    "docs/pdf/EM_T04_OTP-CR-117_19.pdf",
    "docs/pdf/EM_T07_OTP-CR-117_19_001.pdf",
    "docs/pdf/Kamer.pdf",
    "docs/pdf/Rome-Statute.pdf"
]


"share/doc/sbn/docs/_templates" = [
    "docs/_templates/base.rst",
    "docs/_templates/class.rst",
    "docs/_templates/mine.rst",
    "docs/_templates/module.rst"
]
